dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(pygtk_posting, 0.5.32, , pygtk_posting)

AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.11])

AM_PATH_PYTHON







AC_OUTPUT([
Makefile
src/Makefile
templates/Makefile
help/Makefile
logs/Makefile
src/py3o/template/Makefile
src/py3o/template/tests/Makefile
src/py3o/template/tests/templates/Makefile
src/py3o/template/tests/templates/images/Makefile
src/pyjon/utils/Makefile
src/inventory/Makefile
src/invoice/Makefile
src/db/Makefile
src/reports/Makefile
src/admin/Makefile
src/payroll/Makefile
src/modules/Makefile
src/manufacturing/Makefile
src/resources/Makefile
help/C/Makefile
help/C/pygtk-posting/Makefile

])
