## Process this file with automake to produce Makefile.in
## Created by Anjuta


## Directory where .class files will be installed
pygtk_postingdir = $(pythondir)/pygtk_posting


pygtk_posting_PYTHON = \
	pygtk_posting.py \
	account_transactions.py \
	bank_statement.py \
	contacts.py \
	deposits.py \
	products.py \
	settings.py \
	unpaid_invoices.py \
	accounts_configuration.py \
	purchase_ordering.py \
	vendor_payment.py \
	unprocessed_po.py \
	customer_payment.py \
	job_sheet.py \
	job_types.py \
	credit_card_statements.py \
	jobs_to_invoice.py \
	statementing.py \
	customer_tax_exemptions.py \
	product_location.py \
	manufacturing.py \
	documenting.py \
	testxlwt.py \
	time_clock.py \
	view_log.py \
	invoice_window.py \
	documents_window.py \
	purchase_order_window.py \
	documents_to_invoice.py \
	barcode_generator.py \
	receive_orders.py \
	locations.py \
	Code128.py \
	customer_statement.py \
	printing.py \
	dateutils.py \
	contact_terms.py \
	pricing.py \
	incoming_invoice.py \
	check_writing.py \
	loan_payment.py \
	loan_payment.ui\
	pygtk_posting.ui \
	contacts.ui \
	products.ui \
	account_transactions.ui \
	bank_statement.ui \
	deposits.ui \
	settings.ui \
	unpaid_invoices.ui \
	accounts_configuration.ui \
	vendor_payment.ui \
	unprocessed_po.ui \
	customer_payment.ui \
	job_types.ui \
	credit_card_statements.ui \
	job_sheet.ui \
	jobs_to_invoice.ui \
	customer_tax_exemptions.ui \
	product_location.ui \
	manufacturing.ui \
	testxlwt.ui \
	time_clock.ui \
	view_log.ui \
	invoice_window.ui \
	documents_window.ui \
	purchase_order_window.ui \
	documents_to_invoice.ui \
	receive_orders.ui \
	locations.ui \
	customer_statement.ui \
	contact_terms.ui \
	incoming_invoice.ui \
	product_search.py \
	product_search.ui \
	resource_management.py \
	resource_management.ui \
	resource_management_tags.ui \
	resource_management_tags.py \
	resource_calendar.py \
	resource_calendar.ui \
	open_invoices.py \
	log_utils.py \
	open_invoices.ui \
	resource_diary.py \
	resource_diary.ui \
	employee_payment.py \
	employee_payment.ui \
	assembled_products.ui \
	assembled_products.py \
	double_entry_transaction.py \
	double_entry_transaction.ui \
	credit_card_merchant.py \
	credit_card_merchant.ui \
	resource_search.py \
	payment_receipt.py \
	payment_receipt.ui \
	spell_check.py \
	tax_rates.py \
	tax_rates.ui \
	product_hub.py \
	product_hub.ui \
	catalog_creator.py \
	catalog_creator.ui \
	product_serial_numbers.py \
	product_serial_numbers.ui \
	resource_search.ui \
	fiscal_years.py \
	fiscal_years.ui \
	open_purchase_orders.py \
	open_purchase_orders.ui \
	miscellaneous_revenue.py \
	miscellaneous_revenue.ui \
	accounts_overview.py \
	accounts_overview.ui \
	customer_markup_percent.py \
	customer_markup_percent.ui \
	credit_memo.py \
	credit_memo.ui \
	main.py \
	mailing_lists.py \
	mailing_lists.ui \
	loans.py \
	loans.ui \
	pdf_attachment.py \
	pdf_attachment.ui \
	contact_hub.py


EXTRA_DIST = $(ui_DATA)


# Remove ui directory on uninstall
uninstall-local:

	-rm -r $(uidir)

	-rm -r $(pkgdatadir)

SUBDIRS = \
	inventory \
	invoice \
	db \
	reports \
	admin \
	payroll \
	pdf_opt \
	modules
