## Process this file with automake to produce Makefile.in
## Created by Anjuta


## Directory where .class files will be installed
pygtk_postingdir = $(pythondir)/pygtk_posting


pygtk_posting_PYTHON = \
	account_transactions.py \
	bank_statement.py \
	deposits.py \
	settings.py \
	unpaid_invoices.py \
	accounts_configuration.py \
	purchase_ordering.py \
	vendor_payment.py \
	unprocessed_po.py \
	customer_payment.py \
	job_sheet.py \
	job_types.py \
	credit_card_statements.py \
	statementing.py \
	customer_tax_exemptions.py \
	product_location.py \
	documenting.py \
	time_clock.py \
	view_log.py \
	invoice_window.py \
	documents_window.py \
	purchase_order_window.py \
	documents_to_invoice.py \
	barcode_generator.py \
	receive_orders.py \
	locations.py \
	customer_statement.py \
	printing.py \
	dateutils.py \
	pricing.py \
	incoming_invoice.py \
	check_writing.py \
	loan_payment.py \
	loan_payment.ui\
	account_transactions.ui \
	bank_statement.ui \
	deposits.ui \
	settings.ui \
	unpaid_invoices.ui \
	accounts_configuration.ui \
	vendor_payment.ui \
	unprocessed_po.ui \
	customer_payment.ui \
	job_types.ui \
	credit_card_statements.ui \
	job_sheet.ui \
	customer_tax_exemptions.ui \
	product_location.ui \
	time_clock.ui \
	view_log.ui \
	invoice_window.ui \
	documents_window.ui \
	purchase_order_window.ui \
	documents_to_invoice.ui \
	receive_orders.ui \
	locations.ui \
	customer_statement.ui \
	incoming_invoice.ui \
	product_search.py \
	product_search.ui \
	open_invoices.py \
	open_invoices.ui \
	employee_payment.py \
	employee_payment.ui \
	double_entry_transaction.py \
	double_entry_transaction.ui \
	credit_card_merchant.py \
	credit_card_merchant.ui \
	payment_receipt.py \
	payment_receipt.ui \
	spell_check.py \
	tax_rates.py \
	tax_rates.ui \
	product_hub.py \
	product_hub.ui \
	catalog_creator.py \
	catalog_creator.ui \
	product_serial_numbers.py \
	product_serial_numbers.ui \
	fiscal_years.py \
	fiscal_years.ui \
	open_purchase_orders.py \
	open_purchase_orders.ui \
	miscellaneous_revenue.py \
	miscellaneous_revenue.ui \
	accounts_overview.py \
	accounts_overview.ui \
	customer_markup_percent.py \
	customer_markup_percent.ui \
	credit_memo.py \
	credit_memo.ui \
	main.py \
	mailing_lists.py \
	mailing_lists.ui \
	loans.py \
	loans.ui \
	pdf_attachment.py \
	pdf_attachment.ui \
	contact_hub.py \
	calculator.py \
	customer_terms.py \
	customer_terms.ui \
	credit_memo_template.py \
	contact_hub.ui \
	shipping_info.py \
	shipping_info.ui \
	keybindings.py \
	keybindings.ui \
	budget.py \
	budget.ui \
	traceback_handler.py \
	traceback_handler.ui \
	budget_configuration.py \
	budget_configuration.ui \
	customer_finance_charge.py \
	customer_finance_charge.ui \
	quick_command.py \
	quick_command.ui \
	constants.py \
	main_window.py \
	main_window.ui \
	accounts.py \
	open_job_sheets.py \
	open_job_sheets.ui \
	expense_products.py \
	expense_products.ui \
	mailing_list_printing.py \
	mailing_list_printing.ui \
	products_overview.py \
	products_overview.ui \
	product_edit_location.py \
	product_edit_location.ui \
	product_edit_main.py \
	product_edit_main.ui \
	product_edit_order_numbers.py \
	product_edit_order_numbers.ui \
	contact_edit_main.py \
	contact_edit_main.ui \
	contacts_overview.py \
	contacts_overview.ui \
	contact_edit_exemptions.py \
	contact_edit_exemptions.ui \
	contact_edit_files.py \
	contact_edit_files.ui \
	complete_search.py \
	complete_search.ui \
	product_print_label.py \
	product_print_label.ui \
	contact_edit_individual.py \
	contact_edit_individual.ui \
	about_window.py \
	about_window.ui \
	sqlite_utils.py \
	admin_utils.py \
	admin_utils.ui \
	invoice_hub.py \
	invoice_hub.ui
	invoice_hub.py \
	invoice_hub.ui


EXTRA_DIST = $(ui_DATA)


# Remove ui directory on uninstall
uninstall-local:

	-rm -r $(uidir)

	-rm -r $(pkgdatadir)

SUBDIRS = \
	inventory \
	invoice \
	db \
	reports \
	admin \
	payroll \
	modules \
	manufacturing \
	resources
