## Process this file with automake to produce Makefile.in


python_PYTHON = invoice_template.odt \
	purchase_order_template.odt \
	statement_template.odt \
	document_template.odt \
	product_label_template.odt \
	contact_label_template.odt \
	manufacturing_serial_template.odt \
	time_card_template.odt \
	template_readme.txt \
	employee_time.odt \
	env10_template.odt \
	payment_receipt_template.odt \
	letter_template.odt
