## Process this file with automake to produce Makefile.in


python_PYTHON = invoice_template.odt \
	purchase_order_template.odt \
	statement_template.odt \
	document_template.odt \
	product_label_template.odt \
	manufacturing_serial_template.odt \
	time_card_template.odt \
	template_readme.txt \
	employee_time.odt \
	payment_receipt_template.odt \
	catalog_template.odt \
	credit_memo_template.odt \
	job_serial_template.odt \
	mailing_list_template.odt \
	vendor_check_template.odt \
	letter_head_template.odt \
	mailing_envelope_template.odt \
	shipping_label_template.odt
