## Process this file with automake to produce Makefile.in


python_PYTHON = database_tools.py \
	database_tools.ui \
	database_utils.py \
	PyGtk_Posting.svg \
	transactor.py \
	__init__.py \
	backup_restore.py \
	backup_restore.ui \
	sql_window.py \
	sql_window.ui \
	create_db.sql \
	insert_basic.sql \
	update_db_major.sql \
	update_db_minor.sql \
	version.py
