## Process this file with automake to produce Makefile.in


python_PYTHON = database_tools.py \
	database_tools.ui \
	PyGtk_Posting.svg \
	transactor.py \
	__init__.py \
	sql_window.py \
	sql_window.ui \
	create_db.sql \
	insert_basic.sql \
	update_db_major.sql \
	update_db_minor.sql \
	version.py \
	version.ui \
	database_backup.py \
	database_backup.ui \
	database_restore.py \
	database_restore.ui
