## Process this file with automake to produce Makefile.in


python_PYTHON = __init__.py \
	inventory_adjustment.py \
	inventory_history.py \
	inventory_history.ui \
	inventorying.py \
	PyGtk_Posting.svg \
	inventory_adjustment.ui \
	invoiced.py \
	inventory_summaries.py \
	inventory_summaries.ui \
	inventory_count.py \
	inventory_count.ui \
	inventory_compare.py \
	inventory_compare.ui
