## Process this file with automake to produce Makefile.in

python_PYTHON = time_clock_project.ui \
	time_clock_project.py \
	inventory_count.py \
	inventory_count.ui \
	product_transactions.py \
	statements.py \
	statements.ui \
	job_sheet_history.ui \
	job_sheet_history.py \
	time_clock_history.ui \
	time_clock_history.py \
	pay_stub_history.py \
	pay_stub_history.ui \
	product_transactions.ui \
	main_reports_window.py \
	main_reports_window.ui \
	payments_received.py \
	payments_received.ui \
	loan_payments.py \
	__init__.py \
	loan_payments.ui \
	incoming_invoices.py \
	incoming_invoices.ui \
	deposits.py \
	deposits.ui \
	sales_tax_report.py \
	sales_tax_report.ui \
	contact_transactions.py \
	contact_transactions.ui \
	vendor_history.py \
	vendor_history.ui \
	product_account_relationship.py \
	product_account_relationship.ui \
	customer_history.py \
	customer_history.ui \
	manufacturing_history.py \
	manufacturing_history.ui \
	invoice_history.py \
	invoice_history.ui

uidir = $(pkgdatadir)/reports/ui
