## Process this file with automake to produce Makefile.in

python_PYTHON = time_clock_project.ui \
	time_clock_project.py \
	inventory_count.py \
	inventory_count.ui \
	job_sheet_history.ui \
	job_sheet_history.py \
	time_clock_history.ui \
	time_clock_history.py \
	pay_stub_history.py \
	pay_stub_history.ui \
	main_reports_window.py \
	main_reports_window.ui \
	payments_received.py \
	payments_received.ui \
	loan_payments.py \
	__init__.py \
	loan_payments.ui \
	incoming_invoices.py \
	incoming_invoices.ui \
	deposits.py \
	deposits.ui \
	sales_tax_report.py \
	sales_tax_report.ui \
	vendor_history.py \
	vendor_history.ui \
	product_account_relationship.py \
	product_account_relationship.ui \
	manufacturing_history.py \
	manufacturing_history.ui \
	invoice_history.py \
	invoice_history.ui \
	contact_history.ui \
	contact_history.py \
	product_history.py \
	product_history.ui \
	invoice_to_payment_matching.py \
	invoice_to_payment_matching.ui \
	gl_entry_lookup.py \
	gl_entry_lookup.ui \
	bank_statements.py \
	bank_statements.ui \
	profit_loss_report.py \
	profit_loss_report.ui \
	net_worth.py \
	net_worth.ui \
	export_to_pdf.py \
	export_to_pdf.ui \
	report_hub.py \
	report_hub.ui \
	export_to_xls.py \
	export_to_xls.ui \
	customer_statements.py \
	customer_statements.ui \
	product_markup.py \
	product_markup.ui

uidir = $(pkgdatadir)/reports/ui
