## Process this file with automake to produce Makefile.in


python_PYTHON = resource_types.py \
	resource_types.ui \
	resource_calendar.py \
	resource_calendar.ui \
	resource_diary.py \
	resource_diary.ui \
	resource_management.py \
	resource_management.ui \
	resource_search.py \
	resource_search.ui \
	resource_categories.py \
	resource_categories.ui
