## Process this file with automake to produce Makefile.in


SUBDIRS = \
	images

bin_PROGRAMS =  \
	templates

templates_SOURCES =  \
	keepboundary_detection_false.xml \
	keepboundary_detection_true.xml \
	list_content.xml \
	move_four.xml \
	move_four_result.xml \
	move_one.xml \
	move_one_result.xml \
	move_siblings.xml \
	move_siblings_result_1.xml \
	move_siblings_result_2.xml \
	move_three.xml \
	move_three_result.xml \
	move_two.xml \
	move_two_result.xml \
	py3o_access_global_variable.odt \
	py3o_access_global_variable_inside_loop.odt \
	py3o_access_in_loop_variable.odt \
	py3o_access_in_loop_variable_with_attribute.odt \
	py3o_access_in_loop_variable_with_multiple_attribute.odt \
	py3o_access_parent_variable_in_nested_loop.odt \
	py3o_access_parent_variable_in_nested_loop_with_attribute.odt \
	py3o_access_variable_in_nested_loop.odt \
	py3o_all_in_one_for_loop.odt \
	py3o_double_loop_on_same_object.odt \
	py3o_enumerate.odt \
	py3o_example_invalid_template.odt \
	py3o_example_template.odt \
	py3o_iterable_with_global_attribute.odt \
	py3o_iterator_with_attribute.odt \
	py3o_iterator_with_attribute_and_in_loop_variable_with_attribute.odt \
	py3o_list_template.odt \
	py3o_logo.odt \
	py3o_missing_open_template.odt \
	py3o_nested_list_template.odt \
	py3o_page_break_without_tail.odt \
	py3o_soft_page_break.odt \
	py3o_style1_template.odt \
	py3o_template_format_date.odt \
	py3o_template_format_date_exception.odt \
	py3o_template_function_call.odt \
	py3o_test_statement.odt \
	py3o_two_for_list_on_same_attribute.odt \
	py3o_undefined_variables_1.odt \
	py3o_undefined_variables_2.odt \
	style_application_with_function_call.odt \
	style_application_with_function_call_result.xml \
	template_format_date_result.xml \
	template_with_function_call_result.xml \
	test_false_value.odt
